# serial-cli

./: Cargo.toml  README.md  config copy.json  config.json
src/: main.rs
