[package]
name = "serial-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc = "0.0.1"
chrono = "0.4.31"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
serialport = { git = "https://github.com/LukaOber/serialport-rs" }
